--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "axios": "^1.13.0",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.15.3",
     "socket.io": "^4.8.1"
   },
